# libparakeet

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  libparakeet (mingw64).code-workspace  libparakeet (ucrt64).code-workspace  libparakeet.code-workspace  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-linux-x86_64.yml  build-windows.yml  qa-clang-tidy.yml
examples/: CMakeLists.txt  arg_parser.hpp
examples/kuwo/: CMakeLists.txt  README.MD
examples/kuwo/src/: kuwo-cli.cpp
examples/migu3d/: CMakeLists.txt  README.MD
examples/migu3d/src/: migu3d-example.cpp
examples/qingting-fm/: CMakeLists.txt  README.MD
examples/qingting-fm/src/: qingting-fm-cli.cpp
examples/qmc2/: CMakeLists.txt  README.MD
examples/qmc2/src/: qmc2-cli.cpp  qmc2-example.cpp
examples/qrc/: CMakeLists.txt  README.MD
examples/qrc/src/: qrc-cli.cpp  qrc-example.cpp
fixture/: README.MD  desktop.ini  joox_[E!04].ofl_en  test.mg3d  test.ncm  test.xm  test_kgm_v2.kgm  test_kgm_v3.kgm  test_kgm_v4.kgm  test_kuwo.kwm  test_qmc1.qmcogg  test_qmc2_map.mgg  test_qmc2_rc4.mgg  test_qmc2_rc4_EncV2.mgg  test_qtfm_MTIzNDU2QEBA.qta  test_xmly.x2m  test_xmly.x3m
include/parakeet-crypto/: IStream.h  ITransformer.h  StreamHelper.h  endian.h  version.h
include/parakeet-crypto/cipher/: cipher.h  cipher_block.h  cipher_error.h
include/parakeet-crypto/decryption/: DecryptionManager.h  DecryptionStream.h
include/parakeet-crypto/decryptor/: StreamDecryptor.h
include/parakeet-crypto/misc/: QMCFooterParser.h  QMCKeyDeriver.h
include/parakeet-crypto/qingting_fm/: device_key.h
include/parakeet-crypto/qmc2/: footer_parser.h  key_crypto.h  key_util.h
include/parakeet-crypto/transformer/: joox.h  kgm.h  kuwo.h  migu3d.h  ncm.h  qingting_fm.h  qmc.h  qrc.h  xiami.h  ximalaya.h
include/parakeet-crypto/utils/: AudioMetadata.h  AudioTypes.h  DetectAudioType.h  aes.h  base64.h  hex.h  md5.h  tc_tea.h
include/parakeet-crypto/xmly/: scramble_key.h
scripts/: create-migu3d-fixture.py  format-all.sh
src/: state_machine_example.h  version.cpp.in
src/cipher/aes/: aes-128-ctr.test.cc  aes.cpp  aes.test.cc  ecb_crypto.hpp  helper.hpp  key_expansion.hpp
src/decryption/: DecryptionManager.cpp
src/decryption/kugou/: KGMDecryptor.h  KGMDecryptorType2.cpp  KGMDecryptorType3.cpp  KGMDecryptorType4.cpp  KugouFileLoader.cpp  KugouFileLoader.test.cc  KugouHeader.h
src/decryption/kuwo/: KuwoFileLoader.cpp  KuwoFileLoader.test.cc
src/decryption/netease/: NCMFileLoader.cpp  NCMFileLoader.test.cc
src/decryption/tencent/: JooxFileLoader.cpp  JooxFileLoader.test.cc  QMCv1.test.cc  QMCv1Loader.cpp  QMCv2.test.cc  QMCv2Loader.cpp
src/decryption/xiami/: XiamiFileLoader.cpp  XiamiFileLoader.test.cc
src/decryption/ximalaya/: X2MFile.test.cc  X3MFile.test.cc  XimalayaFileLoader.cpp  XimalayaScrambleTableGeneration.cpp  XimalayaScrambleTableGeneration.h  XimalayaScrambleTableGeneration.test.cc
src/decryptor/joox/: JooxFileLoader.cpp  JooxFileLoader.test.cc
src/decryptor/kugou/: KGMCrypto.cpp  KGMCrypto.h  KGMCryptoType2.cpp  KGMCryptoType3.cpp  KGMCryptoType4.cpp  KGMDecryptor.cpp  KGMDecryptor.h  KGMDecryptorType.template.txt  KGMDecryptorType2.cpp  KGMDecryptorType3.cpp  KGMDecryptorType4.cpp  KGMHeaderStruct.h  KugouFileLoader.cpp  KugouFileLoader.test.cc  KugouHeader.h
src/decryptor/kuwo/: KuwoFileLoader.cpp  KuwoFileLoader.test.cc
src/decryptor/netease/: NCMFileLoader.cpp  NCMFileLoader.test.cc  NeteaseRC4.h
src/decryptor/qmc/: EncV2.cpp  EncV2.h  QMCFooterParser.cpp  QMCKeyCrypto.cpp  QMCKeyCrypto.test.cc  QMCKeyDeriver.cpp  QMCTailParser.cpp  QMCTailParser.test.cc  TEAKeyDerive.h
src/decryptor/qmc1/: QMCv1.test.cc  QMCv1Loader.cpp
src/decryptor/qmc2/: QMCv2.test.cc  QMCv2Loader.cpp  QMCv2RC4.h  QMCv2Utils.h
src/decryptor/tencent/: JooxFileLoader.cpp  JooxFileLoader.test.cc  QMCv1.test.cc  QMCv1Loader.cpp  QMCv2.test.cc  QMCv2Loader.cpp
src/decryptor/xiami/: XiamiFileLoader.cpp  (+1 more)
src/joox/: joox_const.h  joox_v4_decryption.cpp  joox_v4_decryption.test.cc  joox_v4_encryption.cpp  joox_v4_encryption.test.cc
src/kgm/: kgm.test.cc  kgm_constants.h  kgm_crypto.h  kgm_crypto_type2.cpp  kgm_crypto_type3.cpp  kgm_crypto_type4.cpp  kgm_header.h  kgm_transformer.cpp
src/kuwo/: kuwo.test.cc  kuwo_common.h  kuwo_decryption.cpp  kuwo_encryption.cpp
src/migu3d/: freq_analysis.hpp  migu3d.cpp  migu3d.test.cc  migu_decrypt.hpp
src/misc/: QMCFooterParser.cpp  QMCKeyDeriver.cpp
src/ncm/: ncm.cpp  ncm.test.cc  ncm_key_utils.h  ncm_rc4.h  sized_block_reader.h
src/qingting_fm/: crypto_key.cpp  crypto_key.test.cc  device_key.cpp  device_key.test.cc  qingting_fm.h  qingting_fm_transformer.cpp  qingting_fm_transformer.test.cc
src/qmc1/: qmc1_decryption_transformer.h  qmc1_key_utils.h  qmc1_key_utils.test.cc  qmc1_static.cpp  qmc1_static.test.cc
src/qmc2/: footer_parser.cpp  footer_parser.test.cc  footer_parser_pc.h  key_crypto.cpp  key_crypto.test.cc  key_v1.h  key_v2.h  qmc2_dynamic.cpp  qmc2_keys.test.hh  qmc2_map.cpp  qmc2_map.test.cc  qmc2_map_key_utils.h  qmc2_rc4.cpp  qmc2_rc4.test.cc
src/qrc/: int_helper.h  qrc.cpp  qrc_des.cpp  qrc_des.h  qrc_des.test.cc  qrc_des_data.h
src/tc_tea/: tc_tea_ecb.cpp
src/test/: helper.test.cc  helper.test.hh  read_fixture.test.hh  setup.test.cc  test_decryption.test.hh  test_env.h.in  version.test.cc
src/utils/: BufferHelper.h  DetectAudioType.cpp  EndianHelper.h  EndianHelper.test.cc  LoopIterator.h  RotateArray.h  RotateArray.test.cc  StringHelper.h  XorHelper.h  aes-128-ecb.cpp  aes.h  base64.cpp  base64.h  base64.test.cc  buffered_transform.h  endian_helper.h  endian_helper.test.cc  hex.cpp  hex.h  hex.test.cc  logger.h  logger_config.h.in  loop_iterator.h  md5.cpp  md5.h  paged_reader.h  pkcs7.hpp  rotate_array.h  rotate_array.test.cc  str_helper.hpp  string_helper.h  tc_tea.cpp  umc_version.cpp  xor_helper.h
src/xiami/: xiami.test.cc  xiami_decryption.cpp
src/ximalaya/: xmly_decryption.cpp  xmly_decryption.test.cc  xmly_scramble_key.cpp  xmly_scramble_key.test.cc
(+81 files in other folders)
